//
// Created by lebocqt on 06/12/22.
//

#ifndef ANT_SIMULATION_TILE_H
#define ANT_SIMULATION_TILE_H


class Tile {

};


#endif //ANT_SIMULATION_TILE_H
