@startuml



class World {
    + getTile(x,y): Tile
    + moveAnt(Ant, Tile)
}


interface Object {

}

class Tile {
    - x
    - y
    + getX()
    + getY()
    + getAnts(): Ant[]
    + getObject(): Object

}

class Pheromone {
    - quantity: int
    - geneticMarker: char
    + getQuantity()
}


Object <|-- Rock
Object <|-- Food
Object <|-- Colony


World *-> Tile : Tile[][]
Tile *-> Object : Object
Tile *--> Ant : Ant[]
Tile *--> Pheromone : Pheromone[]

Ant *-- Tile
Ant *- Pheromone




@enduml